[package]
name = "classy"
description = "Classy: A Rust Library for Parsing Java Class Files"
readme = "README.md"
license = "Apache-2.0"
homepage = "https://github.com/andygrove/classy"
repository = "https://github.com/andygrove/classy"
authors = ["Andy Grove <andygrove73@gmail.com>"]
version = "0.3.0"
edition = "2021"

[dependencies]
byteorder = "1.4.3"
glob = "0.3.1"
regex = "1.8.1"
structopt = "0.3.26"
zip = "0.6.5"

[dev-dependencies]
tempdir = "0.3.7"

[[bin]]
name = "classy"
path = "src/bin/classy.rs"

[[test]]
name = "integration_tests"
path = "tests/integration-tests.rs"
